--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<img src="images/tongueprada.jpeg" alt="prada">
 
 	<p></p>
-	<a href="#" class="btn-blue">Click Here For Promotion</a>
+	<a href="#" class="btn-blue">Click Here For Promotion.</a>
 
 </div>
 
